# diploma_bach

./: .gitignore  CIC.h  CMakeLists.txt  Cmake_dip.cpp  Cmake_dip.h  Constants.h  E.h  E_f.h  E_for.h  Fi.h  Move.h  SETV.h  datas.ipynb  main.cpp  n_el.txt  n_ions.txt  normal.py  test_cmake.cpp  Книга1.xlsx
Cmake_dip/: CMakeLists.txt  Cmake_dip.cpp  Cmake_dip.h  E_f.h
Обработка данных/: !_1000_1000_0.5e-12_rho.avi  !_1000_50000.avi  !_50_5000_0.5e-12.avi  !_50_5000_e-11.avi  !_fi.avi  !_fi_T.avi  !_rho.avi  !_rho_0,5e-12_ne17_5fps.avi  !_rho_241124.avi  !_rho_T.avi  !_rho_little.avi  !_rho_little_t.avi  !_много_частиц.avi  datas.ipynb  fi.txt  rho_el.avi  rho_el.txt  rho_ions.txt
